--- a/color-game/package.json
+++ b/color-game/package.json
@@ -34,6 +34,8 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
     "tailwindcss": "^4.0.3"
   }
 }
